--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-netlify": "^1.0.0-next.88",
 		"@sveltejs/kit": "^1.5.0",
+		"@types/marked": "^5.0.1",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
@@ -26,6 +28,9 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"destyle.css": "^4.0.0"
+		"@sveltejs/adapter-vercel": "^3.0.1",
+		"destyle.css": "^4.0.0",
+		"marked": "^5.1.1",
+		"showdown": "^2.1.0"
 	}
 }
