--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/adapter-netlify": "^1.0.0-next.88",
+		"@sveltejs/adapter-netlify": "^1.0.5",
 		"@sveltejs/kit": "^1.5.0",
 		"@types/marked": "^5.0.1",
 		"eslint": "^8.28.0",
